tests/NormalTests/paczka1/fuzzy1/55484882.err
Error in line 12: o8z A801 24,2
Error in line 20: o8z S693 68,2
Error in line 30: vi2ssn A801 21,7
